<resources>
    <string name="app_name">SpyroTheDragon</string>
    <string name="worlds">Mundos</string>
    <string name="characters">Personajes</string>
    <string name="collectibles">Coleccionables</string>
    <string name="title_about">Acerca de</string>
    <string name="text_about">Aplicación desarrollada por \n <b>Miguel Alcaide Bautista.</b></string>


    <string name="accept">Aceptar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_guide">Guia S</string>
    <string name="start_guide">start</string>
    <string name="skip_guide">skip</string>
    <string name="continue_guide">continue</string>
    <string name="restablecerGuia">Volver a la Guia</string>
    <string name="info">Info</string>
    <string name="guide_intro_title">Bienvenido a la Guía</string>
    <string name="guide_intro_sub">Esta es una guía interactiva para ayudarte a entender la aplicación.</string>
    <string name="logo_spyro_image">logo de spyro</string>
    <string name="down_logo_spyro_text">Debajo de logo</string>
    <string name="guide_intro_p">parrafo de texto\n</string>

    <string name="guide_characters_text">Explora en detalle a todos los personajes del mundo de Spyro, conoce sus historias, habilidades y curiosidades.</string>
    <string name="guide_worlds_text">Descubre los increíbles mundos de Spyro, sus secretos ocultos, desafíos únicos y todo lo que los hace especiales.</string>
    <string name="guide_collectibles_text">Encuentra y colecciona todos los objetos especiales de Spyro, desde gemas hasta huevos de dragón y más sorpresas.</string>
    <string name="guide_about_text">Aqui podras encontrar informacion acerca de la aplicación.</string>
    <string name="guide_final_summary_text">

        <b><font color="#FF0000">¡Felicidades!</font></b>
        <br/><br/>
        Has completado todos los pasos de la <i>guía</i>.
        <br/><br/>
        Ahora estás listo para explorar todo lo que la <u>aplicación</u> tiene para ofrecer.
        <br/><br/>
        <font color="#4CAF50"><b>Pulsa el botón</b></font> para comenzar a usar la aplicación y disfrutar de una experiencia completa en el mundo de <font color="#800080"><i>Spyro</i></font>.

</string>


</resources>